--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: "^0.5.2+1"
   firebase_auth: "^0.18.3+1"
   flutter_mobx: ^1.1.0+2
+  settings_ui: ^0.5.0
+
   
   flutter_launcher_icons: "^0.8.1"
   flutter_rename_app: "^1.0.0"
